# symeo-python-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.circleci/: config.yml
properties/: local.example.ini
secrets/: local.example.ini
src/application/rest_api_adapter/controller/: user_controller.py
src/application/rest_api_adapter/controllers/: user_controller.py
src/application/rest_api_adapter/dto/user/: get_user_dto.py  post_user_dto.py  user_dto.py
src/bootstrap/: configuration.py  main.py  router.py
src/domain/configuration/: configuration_service.py
src/domain/exception/: exceptions.py
src/domain/model/: user_model.py
src/domain/models/: user_model.py
src/domain/port/port_in/: user_facade.py
src/domain/port/port_out/: user_storage_port.py
src/domain/service/: user_service.py
src/infrastructure/postgres_adapter/adapter/: postgres_user_adapter.py
src/infrastructure/postgres_adapter/alembic/: env.py
src/infrastructure/postgres_adapter/entity/: user_entity.py
src/infrastructure/postgres_adapter/mapper/: user_mapper.py
src/infrastructure/postgres_adapter/utils/: postgres_utils.py
tests/integration/: abstract_integration_test.py  app_client.py
tests/integration/controller/user/: get_user_controller_test.py  post_user_controller_test.py  user_controller_test.py
tests/integration/controllers/user/: get_user_controller_test.py
tests/integration/properties/: tests.ini
tests/integration/secrets/: tests.ini
tests/unit/service/: user_service_test.py
tests/utils/: database_connection.py
tests/utils/entities/: mock_user.py
tests/utils/mock/: user_storage_mock.py
(+2 files in other folders)
