[tool.poetry]
name = "symeo-python-template"
version = "0.1.0"
description = ""
authors = ["Dorian Frances <dfrances.pro@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
sqlalchemy = "^2.0.13"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
alembic = "^1.11.0"
configparser = "^5.3.0"
httpx = "^0.24.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pre-commit = "^3.3.1"
black = "^23.3.0"
ruff = "^0.0.267"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
