[tool.poetry]
name = "symeo-python-template"
version = "0.1.0"
description = ""
authors = ["Dorian Frances <dfrances.pro@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
sqlalchemy = "^2.0.13"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
alembic = "^1.11.0"
configparser = "^5.3.0"
httpx = "^0.24.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pre-commit = "^3.3.1"
black = "^23.3.0"
ruff = "^0.0.267"
faker = "^18.9.0"
mypy = "^1.3.0"
coverage = "^7.2.5"
testcontainers-postgres = "^0.0.1rc1"

[tool.ruff]
select = ["E", "F", "B"]
ignore = ["E501"]
unfixable = ["B"]

[tool.black]
preview = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
